--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Projeto Final</title>
+    <link rel="stylesheet" media="screen" href="style.css">
 </head>
 <body>
     <h1>Projeto Final</h1>
 </body>
-</html>
+</html>  
